# executive-orders-pdf

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  cli.py  config.yaml  main.py  pdf_summary.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: download_and_merge.yml  main.yml  update_readme.yml
examples/: example.html
executive_orders_pdf/: __init__.py  cli.py  core.py  utils.py
executive_orders_pdf/scripts/: __init__.py  pdf_summary.py  update_readme.py
scripts/: pdf_summary.py  update_readme.py
tests/: __init__.py  conftest.py  test_cli.py  test_pdf_downloader.py  test_pdf_processing.py
